--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,22 @@
 法广
 ------
 
+4-14 [卢比奥：拜登气候特使克里前往中国是给北京送大礼](/articles/rfi/1031858.md)
+
+4-14 [卡斯泰：法国中断所有往返巴西航班](/articles/rfi/1031859.md)
+
+4-14 [美防长访德    宣布增派五百名驻德美军](/articles/rfi/1031860.md)
+
+4-14 [拒签效忠声明    港府要129公务员退休](/articles/rfi/1031861.md)
+
+4-14 [纽约和华盛顿DC暂停强生疫苗接种](/articles/rfi/1031862.md)
+
+4-14 [俄防长：军事演习是因应北约军事威胁](/articles/rfi/1031863.md)
+
+4-14 [德防长：印太重要战略地区 德日将深化军事关系](/articles/rfi/1031864.md)
+
+4-14 [吉布提外海船难 42名非法移民丧生](/articles/rfi/1031865.md)
+
 4-14 [不理会接种娇生疫苗出现血栓 欧股收高 – 法国国际广播电台 - RFI](/articles/rfi/1031866.md)
 
 4-14 [接种娇生疫苗后出现血栓 美国1人不治 – 法国国际广播电台 - RFI](/articles/rfi/1031867.md)
@@ -584,20 +600,4 @@
 4-9 [伊朗释放一艘今年一月扣押的韩国油轮](/articles/rfi/1032156.md)
 
 4-9 [中美新的星球大战 - 法国报纸摘要](/articles/rfi/1032157.md)
-
-4-9 [台湾轻忽散漫的文化酿成重大灾难 - 台北一周](/articles/rfi/1032158.md)
-
-4-9 [缅甸：联合国缅甸事务特使将展开她的亚洲之行](/articles/rfi/1032159.md)
-
-4-9 [延请外国百个名人讲好中共百年故事 柯文思第一人](/articles/rfi/1032160.md)
-
-4-9 [王立强共谍案效应向心夫妇遭台湾检方以洗钱罪起诉](/articles/rfi/1032161.md)
-
-4-9 [智利18座养殖场污染 逾4000吨鲑鱼缺氧暴毙 – 法国国际广播电台 - RFI](/articles/rfi/1032162.md)
-
-4-9 [联合国吁美中俄等国 尽速加入禁雷公约 – 法国国际广播电台 - RFI](/articles/rfi/1032163.md)
-
-4-9 [缅甸驻英大使遭军政府免职 英国愿提供庇护 – 法国国际广播电台 - RFI](/articles/rfi/1032164.md)
-
-4-9 [前庭审主席对吃狗肉有微言遭罢 孙杨案传要重启了](/articles/rfi/1032165.md)
 
