--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-14 [纪念《台湾关系法》42周年 拜登总统派高级非官方代表团访台](/articles/voa/1041534.md)
+
+4-14 [审议供应链 美商务部向一家中国公司发出传票](/articles/voa/1041535.md)
+
+4-14 [美国联邦卫生官员建议暂停接种强生疫苗](/articles/voa/1041536.md)
+
 4-14 [南缅因州大学关闭孔子学院](/articles/voa/1041537.md)
 
 4-14 [各界回应港府拟禁各类查册 忧助长选举舞弊影响营商环境](/articles/voa/1041538.md)
@@ -594,10 +600,4 @@
 4-1 [美国贸易代表发布《2021年国家贸易评估报告》肯定美中贸易“第一阶段协议”](/articles/voa/1041832.md)
 
 4-1 [布林肯重申香港不再享有自治待遇](/articles/voa/1041833.md)
-
-4-1 [白宫要义: 周五美日韩国安顾问首次三方会谈；拜登总统宣布基础建设方案](/articles/voa/1041834.md)
-
-4-1 [威斯康星州最高法院推翻州长颁布的口罩令](/articles/voa/1041835.md)
-
-4-1 [澳大利亚宣布与美国合作建造导弹](/articles/voa/1041836.md)
 
