--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-14 [香港拟将鼓励选民投空白票或抵制选举定为非法](/articles/nyt/1046967.md)
+
+4-14 [简报：美国报告称中国为头号威胁；中国责令科技公司自查](/articles/nyt/1046968.md)
+
 4-13 [台湾原住民狩猎文化：在千年传统与现代法律之间](/articles/nyt/1046969.md)
 
 4-13 [奥运会还应该继续存在吗？](/articles/nyt/1046970.md)
@@ -596,8 +600,4 @@
 1-25 [“痛苦还在”：武汉封城一周年，来自亲历者的声音](/articles/nyt/1047265.md)
 
 1-25 [中国战机连续两日进入台湾防空识别区](/articles/nyt/1047266.md)
-
-1-25 [北京如何把新冠悲剧变为“中国优势”](/articles/nyt/1047267.md)
-
-1-25 [简报：武汉封城周年记；中国战机连续两日进入台湾空域](/articles/nyt/1047268.md)
 
