--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-14 [中国央行称将深入推进支付领域反垄断工作 加快构建跨境支付体系](/articles/reuters/1039340.md)
+
+4-14 [美国总统气候问题特使克里14日至17日访华 中美将就气候变化合作等交换意见](/articles/reuters/1039341.md)
+
+4-14 [中国股市收涨 IT公司承诺依法合规经营激励投资人](/articles/reuters/1039342.md)
+
 4-14 [缅甸民运人士发起“血色”抗议 以反对军方统治](/articles/reuters/1039343.md)
 
 4-14 [欧洲人希望数字欧元满足隐私、安全和便宜等条件--欧洲央行调查](/articles/reuters/1039344.md)
@@ -594,10 +600,4 @@
 4-7 [壹传媒创办人黎智英及两名民主派人士 承认前年8月底参与未经批准集结控罪](/articles/reuters/1039638.md)
 
 4-7 [特斯拉称驾驶室内摄像头在北美以外市场未激活 不存在侵犯用户隐私行为](/articles/reuters/1039639.md)
-
-4-7 [中国财政部官员：健全政府债务管理制度 对隐性债务风险隐患早发现早处置](/articles/reuters/1039640.md)
-
-4-7 [中国财政部官员：“十四五”将积极稳妥推进房地产税立法和改革](/articles/reuters/1039641.md)
-
-4-7 [3月末中国外汇储备环比降349.6亿美元 单月降幅创一年来最大--央行](/articles/reuters/1039642.md)
 
