--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-14 [在充满对亚裔仇恨的时代，那些爱的形式](/articles/nyt/1046964.md)
+
 4-14 [日本福岛核废水入海计划在亚洲引发强烈反弹](/articles/nyt/1046965.md)
 
 4-14 [美情报报告：中国对美国构成最大威胁](/articles/nyt/1046966.md)
@@ -598,6 +600,4 @@
 1-25 [亚洲“毒王”、华裔加拿大公民谢志乐在荷兰被捕](/articles/nyt/1047262.md)
 
 1-25 [中国在控制疫情方面做得太好了吗？](/articles/nyt/1047263.md)
-
-1-25 [俄罗斯爆发大规模抗议，要求释放反对派领袖](/articles/nyt/1047264.md)
 
