--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-14 [拜登将在4月28日在国会联席会议讲话](/articles/voa/1041523.md)
+
 4-14 [受美国制裁影响 台湾芯片公司断供天津飞腾](/articles/voa/1041524.md)
 
 4-14 [可平视美国了？美情报报告：中国是一个日益接近平等实力的竞争对手](/articles/voa/1041525.md)
@@ -598,6 +600,4 @@
 4-1 [李柱铭和黎智英等7位香港民主派人士被判组织或参与未经批准集结罪成](/articles/voa/1041821.md)
 
 4-1 [香港法院裁定黎智英和李柱铭等民主派人士组织或参与未经批准集结罪成](/articles/voa/1041822.md)
-
-4-1 [G7国家贸易官员联合发声明抵制“有害补贴” 意指中国](/articles/voa/1041823.md)
 
