--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-14 [拜登派“好朋友”非官方访问团抵台 看重对台民主承诺](/articles/rfa/1045874.md)
+
 4-14 [美国研发的辉瑞疫苗运抵中国   官方屏蔽民众须自费接种消息](/articles/rfa/1045875.md)
 
 4-14 [日本决定将福岛核废水排海  中韩台不满](/articles/rfa/1045876.md)
@@ -598,6 +600,4 @@
 3-15 [北京八级阵风沙尘暴  全城天昏地暗披黄沙](/articles/rfa/1046172.md)
 
 3-13 [G7谴责改革香港选制   美议员批习近平想重回帝制](/articles/rfa/1046173.md)
-
-3-13 [中国否认拟对阿里开天价罚单  但另十二家企业被罚](/articles/rfa/1046174.md)
 
