--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-14 [菅义伟访白宫在即 美国敦促日本公开支持台湾](/articles/voa/1041522.md)
+
 4-14 [拜登将在4月28日在国会联席会议讲话](/articles/voa/1041523.md)
 
 4-14 [受美国制裁影响 台湾芯片公司断供天津飞腾](/articles/voa/1041524.md)
@@ -598,6 +600,4 @@
 4-1 [台国安局长：中共明年召开20大 增加台湾国安应处压力](/articles/voa/1041820.md)
 
 4-1 [李柱铭和黎智英等7位香港民主派人士被判组织或参与未经批准集结罪成](/articles/voa/1041821.md)
-
-4-1 [香港法院裁定黎智英和李柱铭等民主派人士组织或参与未经批准集结罪成](/articles/voa/1041822.md)
 
