--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-14 [拜登宣布今年9.11从阿富汗全部撤军](/articles/rfi/1031823.md)
+
+4-14 [亚股涨多跌少 – 法国国际广播电台 - RFI](/articles/rfi/1031824.md)
+
+4-14 [《台湾关系法》42周年 拜登派“好朋友”非官方访问团传达看重对台承诺 - 要闻解说](/articles/rfi/1031825.md)
+
 4-14 [缅甸反政变民众泼红漆 誓言恢复民主 – 法国国际广播电台 - RFI](/articles/rfi/1031826.md)
 
 4-14 [伊朗当局扬言 将开始提炼纯度60%浓缩铀 – 法国国际广播电台 - RFI](/articles/rfi/1031827.md)
@@ -594,10 +600,4 @@
 4-10 [塞尔维亚流浪者开始接种Covid疫苗](/articles/rfi/1032121.md)
 
 4-10 [中国在台周边演习    白宫关切忧破坏稳定](/articles/rfi/1032122.md)
-
-4-10 [美参院推出两党议案：与北京展开全面战略竞争](/articles/rfi/1032123.md)
-
-4-10 [土耳其3人2椅外交风波  欧盟2主席权力平衡受关注](/articles/rfi/1032124.md)
-
-4-10 [英国女王丈夫菲利普亲王辞世    各界领袖致哀悼慰问](/articles/rfi/1032125.md)
 
