--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-14 [快科技｜中国游戏审查评分制已试行，低分游戏将被退回](/articles/cdt/383733.md)
+
+4-14 [冰点周刊｜这个县只有3万人](/articles/cdt/383734.md)
+
 4-14 [【404文库】麟阁经略｜日本排福岛核废水，不用过度恐慌](/articles/cdt/383736.md)
 
 4-14 [【404文库】曹教授｜日本将核废水排放入海不是想像的那样](/articles/cdt/383741.md)
@@ -596,8 +600,4 @@
 3-6 [三联生活周刊 | 不回家的孩子们](/articles/cdt/385290.md)
 
 3-6 [【网络民议】无依之地不是法外之地](/articles/cdt/385303.md)
-
-3-5 [【立此存照】最高法院发文：​判决无法律依据的，应以核心价值观为指引！（3月1日实施）](/articles/cdt/385311.md)
-
-3-5 [【异闻观止】知灼 | 让孩子捐赠“压岁钱”，俩部门竟联合下红头文件？](/articles/cdt/385314.md)
 
