--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-14 [专访华裔美国律师王代时：谈家史和中共统治中国的历史](/articles/voa/1041521.md)
+
 4-14 [菅义伟访白宫在即 美国敦促日本公开支持台湾](/articles/voa/1041522.md)
 
 4-14 [拜登将在4月28日在国会联席会议讲话](/articles/voa/1041523.md)
@@ -598,6 +600,4 @@
 4-1 [更多中国船只在中菲争议岛礁集结 美国表态强调美菲联防](/articles/voa/1041819.md)
 
 4-1 [台国安局长：中共明年召开20大 增加台湾国安应处压力](/articles/voa/1041820.md)
-
-4-1 [李柱铭和黎智英等7位香港民主派人士被判组织或参与未经批准集结罪成](/articles/voa/1041821.md)
 
