--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-15 [中国出新招扩大影响 布达佩斯复旦分校项目遭激烈批评](/articles/voa/1041515.md)
+
+4-15 [UN人权高级专员警告：缅甸或将出现叙利亚式的“全面冲突”](/articles/voa/1041516.md)
+
 4-14 [中资铜矿因未遵守环境标准被塞尔维亚政府喊停](/articles/voa/1041517.md)
 
 4-14 [台海紧张之际 美非官方代表团抵台 气候特使访中](/articles/voa/1041518.md)
@@ -596,8 +600,4 @@
 4-1 [为增市民信心？香港下周恢复复必泰疫苗接种](/articles/voa/1041813.md)
 
 4-1 [中西方人权之争烈度空前，美国巨商呼吁为贸易划出防火隔离带](/articles/voa/1041814.md)
-
-4-1 [台外交部证实BBC记者抵台 称欢迎各国媒体来台享受言论自由](/articles/voa/1041815.md)
-
-4-1 [缅甸联邦议会代表委员会宣布成立新政府对抗军事政变](/articles/voa/1041816.md)
 
