--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-15 [大外宣遇挑战：强迫电视认罪受害者吁全球电视供应商采取行动](/articles/rfi/1031801.md)
+
 4-15 [印度大壶节举办地  逾千人染疫 – 法国国际广播电台 - RFI](/articles/rfi/1031802.md)
 
 4-15 [浓缩油工厂被炸后 伊朗威胁将浓缩铀浓度提到60%](/articles/rfi/1031803.md)
@@ -598,6 +600,4 @@
 4-10 [乌克兰不愿军民伤亡 宣告不攻击乌俄边界分离派 – 法国国际广播电台 - RFI](/articles/rfi/1032099.md)
 
 4-10 [生为房奴 死为坟奴 - 微言微语](/articles/rfi/1032100.md)
-
-4-10 [中国各地山寨白宫或埃菲尔铁塔也仿造紫禁城 官方说要管](/articles/rfi/1032101.md)
 
