--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+4-15 [美国会议员要求国务卿评估中国与伊郎关系](/articles/voa/1041507.md)
+
+4-15 [明尼苏达布鲁克林中心涉枪击案警察面临非预谋杀人罪指控](/articles/voa/1041508.md)
+
+4-15 [菅义伟访美后旋即访印菲 - 分析: 东京与印菲合作将缓慢而渐进](/articles/voa/1041509.md)
+
+4-15 [美国务卿: 美国和北约协同自阿富汗撤军](/articles/voa/1041510.md)
+
 4-15 [卜睿哲：美访团赴台或为让台湾安心并理解拜登政策](/articles/voa/1041511.md)
 
 4-15 [香港立法会完成首二读修改选举条例草案 民主党指禁投白票适得其反](/articles/voa/1041512.md)
@@ -592,12 +600,4 @@
 4-2 [李柱铭黎智英等7名香港民主派人士 反送中维园8-18案罪名成立](/articles/voa/1041805.md)
 
 4-2 [疆棉风波在华持续发酵，真抵制还是假抵制？](/articles/voa/1041806.md)
-
-4-2 [中国外交部长与东南亚外长举行会谈 试图拉拢东盟](/articles/voa/1041807.md)
-
-4-2 [美澳制定战略计划 共同应对台海事变](/articles/voa/1041808.md)
-
-4-2 [时事大家谈: 北京拉拢伊朗俄罗斯，专制“轴心”能撼动民主联盟？](/articles/voa/1041809.md)
-
-4-2 [突厥峰会闭幕 土耳其或成为俄中之后中亚新玩家](/articles/voa/1041810.md)
 
