--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-15 [斯里兰卡以环保为重 不屑棕榈油产业](/articles/rfi/1031796.md)
+
+4-15 [斯里兰卡以环保为重 不屑棕榈油产业](/articles/rfi/1031797.md)
+
 4-15 [巴黎圣母院大火两周年 一窥修复工程进度 - 文化遗产](/articles/rfi/1031798.md)
 
 4-15 [港童装Chickeeduck鸡鸭图案被指“黑暴产品”遭没收](/articles/rfi/1031799.md)
@@ -596,8 +600,4 @@
 4-10 [波音737 MAX电路疑有问题 部分暂时停飞 – 法国国际广播电台 - RFI](/articles/rfi/1032094.md)
 
 4-10 [中国国药获准临床实验重组蛋白疫苗](/articles/rfi/1032095.md)
-
-4-10 [马斯葛罗夫投出无安打比赛 教士队史53年来首次 – 法国国际广播电台 - RFI](/articles/rfi/1032096.md)
-
-4-10 [保罗贾索睽违20年重回老东家 巴萨擒拜仁 – 法国国际广播电台 - RFI](/articles/rfi/1032097.md)
 
