--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-15 [美五大情报部门剑指中国：美国最大的威胁](/articles/rfa/1045866.md)
+
+4-15 [九成疫苗来自中国      智利确诊率为何不减反增?](/articles/rfa/1045867.md)
+
 4-15 [中国高中生军训总计不得少于七天：能否加强国防后备力量建设？](/articles/rfa/1045868.md)
 
 4-15 [华涌抵达加拿大申请难民  将继续关注中国低端人口困境](/articles/rfa/1045869.md)
@@ -596,8 +600,4 @@
 3-16 [欧盟疫苗护照或排除中国疫苗  塞尔维亚抗议](/articles/rfa/1046164.md)
 
 3-16 [海外港人发起《2021香港约章》  声明团结流亡港人社区](/articles/rfa/1046165.md)
-
-3-16 [缅甸打砸抢中资企业 台企遭波及](/articles/rfa/1046166.md)
-
-3-15 [达赖喇嘛打疫苗做示范  将为世界和平健康祈福](/articles/rfa/1046167.md)
 
