--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-15 [所有的鱼 | 在一个互联网被切断的国家，革命如何进行，人们如何保持联络](/articles/cdt/383719.md)
+
+4-15 [【立此存照】中国日报网 | 聚焦新时代对外话语体系建设 相关研讨会在上外召开](/articles/cdt/383721.md)
+
 4-15 [米兔槽 | 女权被炸号，我起诉了微博，看看新浪回应了啥？！请你帮我三件事](/articles/cdt/383724.md)
 
 4-15 [【404文库】知乎网友｜福岛废水不会对我国造成太大影响](/articles/cdt/383728.md)
@@ -596,8 +600,4 @@
 3-7 [全现在 | 缅甸政变后最黑暗那一天，19岁华裔少女为抗议而死](/articles/cdt/385282.md)
 
 3-6 [维舟 | 中国女性地位够高了吗？](/articles/cdt/385284.md)
-
-3-6 [大而不当等 | 国家电影局称将“完善电影评估体系”，对电影评分进行宏观调控](/articles/cdt/385285.md)
-
-3-6 [纽约时报 | 无所畏惧的一代：站在抗议第一线的缅甸年轻女性（节选）](/articles/cdt/385287.md)
 
