--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-15 [新版《党史》淡化文革，颂习内容占四分之一](/articles/rfa/1045864.md)
+
+4-15 [美气候特使克里访华  应该合作还是竞争？](/articles/rfa/1045865.md)
+
 4-15 [美五大情报部门剑指中国：美国最大的威胁](/articles/rfa/1045866.md)
 
 4-15 [九成疫苗来自中国      智利确诊率为何不减反增?](/articles/rfa/1045867.md)
@@ -596,8 +600,4 @@
 3-16 [中国拟延迟退休年龄  老百姓怎么看？](/articles/rfa/1046162.md)
 
 3-16 [变态虐待 律师受威胁  恶俗维基案将强行结案](/articles/rfa/1046163.md)
-
-3-16 [欧盟疫苗护照或排除中国疫苗  塞尔维亚抗议](/articles/rfa/1046164.md)
-
-3-16 [海外港人发起《2021香港约章》  声明团结流亡港人社区](/articles/rfa/1046165.md)
 
