--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-15 [FBI局长国会作证：匿名者Q暴力潜力令人关切](/articles/voa/1041503.md)
+
 4-15 [众议院决议案谴责维吾尔人遭受的种族灭绝](/articles/voa/1041504.md)
 
 4-15 [白宫新冠疫情响应团队：暂停使用强生疫苗不会减缓疫苗接种](/articles/voa/1041505.md)
@@ -598,6 +600,4 @@
 4-2 [前国务卿蓬佩奥与台湾驻美代表萧美琴会面](/articles/voa/1041801.md)
 
 4-2 [白宫要义: 白宫批北京判刑香港民主人士，美日韩国安顾问周五在美会谈](/articles/voa/1041802.md)
-
-4-2 [中欧关系落到冰点 人权是不可回避的问题](/articles/voa/1041803.md)
 
