--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-15 [全现在 | 割腕之后，他的卡车没有超重](/articles/cdt/383717.md)
+
+4-15 [一苇杭之渡彼岸 | 疫情中的高耀洁：如果我走了，骨灰一定要回河南](/articles/cdt/383718.md)
+
 4-15 [所有的鱼 | 在一个互联网被切断的国家，革命如何进行，人们如何保持联络](/articles/cdt/383719.md)
 
 4-15 [【立此存照】中国日报网 | 聚焦新时代对外话语体系建设 相关研讨会在上外召开](/articles/cdt/383721.md)
@@ -596,8 +600,4 @@
 3-7 [【旧闻重温】Matters | 关于恐维症，关于大屠杀](/articles/cdt/385279.md)
 
 3-6 [自由亚洲 | 获奖导演赵婷：从“中国的骄傲”变成“辱华分子”](/articles/cdt/385280.md)
-
-3-7 [全现在 | 缅甸政变后最黑暗那一天，19岁华裔少女为抗议而死](/articles/cdt/385282.md)
-
-3-6 [维舟 | 中国女性地位够高了吗？](/articles/cdt/385284.md)
 
