--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-15 [MLB太空人疑有球员染疫 5主力球员遭列伤兵 – 法国国际广播电台 - RFI](/articles/rfi/1031784.md)
+
 4-15 [土耳其媒体：美取消对黑海部署两军舰 – 法国国际广播电台 - RFI](/articles/rfi/1031785.md)
 
 4-15 [拜登甘尼通话  美撤军阿富汗后建立稳固双边关系 – 法国国际广播电台 - RFI](/articles/rfi/1031786.md)
@@ -598,6 +600,4 @@
 4-10 [缅甸驻联合国大使主张 在缅设禁航区并禁运武器 – 法国国际广播电台 - RFI](/articles/rfi/1032082.md)
 
 4-10 [拜登1.5兆美元预算案 卫生教育总经费超出国防 – 法国国际广播电台 - RFI](/articles/rfi/1032083.md)
-
-4-10 [中国再发人权谴责 指美国201场侵略战争](/articles/rfi/1032084.md)
 
