--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-15 [【404文库】鱼眼观察｜第二个“金德强”！震撼场景再次上演](/articles/cdt/383707.md)
+
 4-15 [全现在 | 割腕之后，他的卡车没有超重](/articles/cdt/383717.md)
 
 4-15 [一苇杭之渡彼岸 | 疫情中的高耀洁：如果我走了，骨灰一定要回河南](/articles/cdt/383718.md)
@@ -12,6 +14,8 @@
 4-15 [米兔槽 | 女权被炸号，我起诉了微博，看看新浪回应了啥？！请你帮我三件事](/articles/cdt/383724.md)
 
 4-15 [【404文库】知乎网友｜福岛废水不会对我国造成太大影响](/articles/cdt/383728.md)
+
+4-15 [【异闻观止】环球时报｜境外反华势力拉拢内地学生内幕：“田某自8岁起就收听反华节目”](/articles/cdt/383730.md)
 
 4-14 [快科技｜中国游戏审查评分制已试行，低分游戏将被退回](/articles/cdt/383733.md)
 
@@ -596,8 +600,4 @@
 3-7 [K  Za Win：狱中来信](/articles/cdt/385271.md)
 
 3-7 [equALL  | 对话弦子：投降不是一个可以的选择](/articles/cdt/385278.md)
-
-3-7 [【旧闻重温】Matters | 关于恐维症，关于大屠杀](/articles/cdt/385279.md)
-
-3-6 [自由亚洲 | 获奖导演赵婷：从“中国的骄傲”变成“辱华分子”](/articles/cdt/385280.md)
 
