--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-15 [美国针对与中国竞争召开听证会：科研经费落后](/articles/dw/1042976.md)
+
 4-15 [美称情报挑战严峻 中国成锁定焦点](/articles/dw/1042977.md)
 
 4-14 [普京打了第二针新冠疫苗 打的哪种不透露](/articles/dw/1042978.md)
@@ -598,6 +600,4 @@
 3-28 [缅甸政变后最血腥的一天: 德美等12国谴责暴力](/articles/dw/1043274.md)
 
 3-28 [巴黎卢浮宫开通网上博物馆](/articles/dw/1043275.md)
-
-3-28 [墙外文摘：新疆棉花很软，港台艺人更软？](/articles/dw/1043276.md)
 
