--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-15 [研究显示中国需要在2030年前将燃煤发电碳排放减少一半](/articles/voa/1041493.md)
+
 4-15 [美情报界主管作证国会 FBI：每十小时就开启一件中国调查](/articles/voa/1041494.md)
 
 4-15 [非营利组织“没有你们就没有我们” 帮助因疫情失业的无证劳工](/articles/voa/1041495.md)
@@ -598,6 +600,4 @@
 4-2 [中国是狼是羊？战狼外交官典故用得有点窘 自己也说不清了](/articles/voa/1041791.md)
 
 4-2 [白宫要义：美国正在观察新冠疫情对朝鲜领导层的影响；周五美日韩国安顾问三方会谈](/articles/voa/1041792.md)
-
-4-2 [美日韩国安顾问三边会谈 朝鲜将为首要议题](/articles/voa/1041793.md)
 
