--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-15 [【立此存照】凯迪网编委会致网友的一封信：与“公知”势力划清界线](/articles/cdt/383705.md)
+
 4-15 [【404文库】鱼眼观察｜第二个“金德强”！震撼场景再次上演](/articles/cdt/383707.md)
 
 4-15 [全现在 | 割腕之后，他的卡车没有超重](/articles/cdt/383717.md)
@@ -598,6 +600,4 @@
 3-7 [尖椒部落 | 庆祝妇女节除了买买买，还可以是不买](/articles/cdt/385265.md)
 
 3-7 [K  Za Win：狱中来信](/articles/cdt/385271.md)
-
-3-7 [equALL  | 对话弦子：投降不是一个可以的选择](/articles/cdt/385278.md)
 
