--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-15 [美国周四或宣布对俄罗斯实施新制裁](/articles/voa/1041492.md)
+
 4-15 [研究显示中国需要在2030年前将燃煤发电碳排放减少一半](/articles/voa/1041493.md)
 
 4-15 [美情报界主管作证国会 FBI：每十小时就开启一件中国调查](/articles/voa/1041494.md)
@@ -598,6 +600,4 @@
 4-2 [多样化儿童图书关系美国前途](/articles/voa/1041790.md)
 
 4-2 [中国是狼是羊？战狼外交官典故用得有点窘 自己也说不清了](/articles/voa/1041791.md)
-
-4-2 [白宫要义：美国正在观察新冠疫情对朝鲜领导层的影响；周五美日韩国安顾问三方会谈](/articles/voa/1041792.md)
 
