--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-15 [加拿大国会支持HFX论坛授奖蔡英文](/articles/dw/1042974.md)
+
 4-15 [中国女权运动再遭打压 运动人士忧遭「政治污名化」](/articles/dw/1042975.md)
 
 4-15 [美国针对与中国竞争召开听证会：科研经费落后](/articles/dw/1042976.md)
@@ -598,6 +600,4 @@
 3-29 [古特雷斯：联合国争取不受限制地至新疆考察](/articles/dw/1043272.md)
 
 3-28 [布林肯表示：拜登总统不会因新冠惩罚北京](/articles/dw/1043273.md)
-
-3-28 [缅甸政变后最血腥的一天: 德美等12国谴责暴力](/articles/dw/1043274.md)
 
