--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-15 [中国国台办否认中华民国存在 台湾朝野齐声表示无法接受](/articles/voa/1041490.md)
+
+4-15 [参议院听证会：美国应加大科研投入应对中国的“斯普特尼克时刻”](/articles/voa/1041491.md)
+
 4-15 [美国周四或宣布对俄罗斯实施新制裁](/articles/voa/1041492.md)
 
 4-15 [研究显示中国需要在2030年前将燃煤发电碳排放减少一半](/articles/voa/1041493.md)
@@ -596,8 +600,4 @@
 4-2 [台湾数十年来最严重火车脱轨事故致36人死亡](/articles/voa/1041788.md)
 
 4-2 [专家谈美中角力的危机与契机](/articles/voa/1041789.md)
-
-4-2 [多样化儿童图书关系美国前途](/articles/voa/1041790.md)
-
-4-2 [中国是狼是羊？战狼外交官典故用得有点窘 自己也说不清了](/articles/voa/1041791.md)
 
