--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-15 [我在阿富汗打过仗，我仍然不知道这是否值得](/articles/nyt/1046958.md)
+
 4-15 [美国气候特使克里访华，彰显白宫寻求合作意图](/articles/nyt/1046959.md)
 
 4-15 [史上最大庞氏骗局主谋麦道夫逝世](/articles/nyt/1046960.md)
@@ -598,6 +600,4 @@
 1-26 [太空之争，下一场美中“大国竞赛”](/articles/nyt/1047256.md)
 
 1-26 [声援纳瓦尔尼，俄罗斯的特殊时刻](/articles/nyt/1047257.md)
-
-1-26 [拜登的劳力士](/articles/nyt/1047258.md)
 
