--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-15 [欧盟国家同意引入新冠疫苗接种证](/articles/dw/1042973.md)
+
 4-15 [加拿大国会支持HFX论坛授奖蔡英文](/articles/dw/1042974.md)
 
 4-15 [中国女权运动再遭打压 运动人士忧遭「政治污名化」](/articles/dw/1042975.md)
@@ -598,6 +600,4 @@
 3-29 [美媒：美贸易代表称还没准备取消中国关税](/articles/dw/1043271.md)
 
 3-29 [古特雷斯：联合国争取不受限制地至新疆考察](/articles/dw/1043272.md)
-
-3-28 [布林肯表示：拜登总统不会因新冠惩罚北京](/articles/dw/1043273.md)
 
