--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-15 [央媒发香港抗争“幕后金主”认罪视频    “金主” 李亨利同是薄熙来案证人](/articles/rfa/1045861.md)
+
+4-15 [人行论文警告中国人口现衰减风险](/articles/rfa/1045862.md)
+
 4-15 [“五毛”已经out  中国现靠两千多万的“网络志愿者”](/articles/rfa/1045863.md)
 
 4-15 [新版《党史》淡化文革，颂习内容占四分之一](/articles/rfa/1045864.md)
@@ -596,8 +600,4 @@
 3-16 [打中国疫苗可获签证便利  公平吗？](/articles/rfa/1046159.md)
 
 3-16 [王丹提交政治犯名单 拜登对华人权政策受考验](/articles/rfa/1046160.md)
-
-3-16 [美中会晤在即      话语权争夺鏖战正酣](/articles/rfa/1046161.md)
-
-3-16 [中国拟延迟退休年龄  老百姓怎么看？](/articles/rfa/1046162.md)
 
