--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-15 [【异闻观止】央视新闻｜吃着中国饭砸中国碗！起底“双面人”李亨利](/articles/cdt/383700.md)
+
 4-15 [【立此存照】凯迪网编委会致网友的一封信：与“公知”势力划清界线](/articles/cdt/383705.md)
 
 4-15 [【404文库】鱼眼观察｜第二个“金德强”！震撼场景再次上演](/articles/cdt/383707.md)
@@ -598,6 +600,4 @@
 3-7 [【404文库】张展的泪与血](/articles/cdt/385260.md)
 
 3-7 [尖椒部落 | 庆祝妇女节除了买买买，还可以是不买](/articles/cdt/385265.md)
-
-3-7 [K  Za Win：狱中来信](/articles/cdt/385271.md)
 
