--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-15 [克里抵达上海，拜登寻求美中合作的首次努力面临考验](/articles/voa/1041484.md)
+
+4-15 [美中关系紧张 日本究竟何去何从](/articles/voa/1041485.md)
+
 4-15 [气候峰会前大企业寻求统一并基于市场的途径](/articles/voa/1041486.md)
 
 4-15 [美访团同赴两岸 学者：美中开展“新常态、三合一”关系](/articles/voa/1041487.md)
@@ -596,8 +600,4 @@
 4-2 [美国港澳总领事抨击香港选举制度大倒退，中国外交部反击：不吃这一套！](/articles/voa/1041782.md)
 
 4-2 [大学校园参与抗疫 设立疫苗注射中心](/articles/voa/1041783.md)
-
-4-2 [返港后失联11日 李宇轩家属终与其取得联络](/articles/voa/1041784.md)
-
-4-2 [联合国安理会呼吁缅甸军方释放被拘者，停止暴力](/articles/voa/1041785.md)
 
