--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+4-15 [美国务卿布林肯秘访阿富汗 讨论撤军 – 法国国际广播电台 - RFI](/articles/rfi/1031750.md)
+
+4-15 [零售和就业数据佳 美股开盘涨升 – 法国国际广播电台 - RFI](/articles/rfi/1031751.md)
+
+4-15 [澳洲9月阿富汗撤军 总理哽咽宣读41阵亡军人姓名 – 法国国际广播电台 - RFI](/articles/rfi/1031752.md)
+
+4-15 [重庆李怀庆案：对民营企业家的 “打黑”“黑打”式掠夺 - 要闻解说](/articles/rfi/1031753.md)
+
 4-15 [蔡英文会见美国特使代表团：确保印太稳定繁荣](/articles/rfi/1031754.md)
 
 4-15 [研究显示抗药性疟疾在非洲更常见 专家忧心忡忡 – 法国国际广播电台 - RFI](/articles/rfi/1031755.md)
@@ -592,12 +600,4 @@
 4-11 [新疆棉为例 港官指学校不宜播中国官方指为「失实」的报道](/articles/rfi/1032048.md)
 
 4-11 [新疆一煤矿透水 仍有21人受困](/articles/rfi/1032049.md)
-
-4-11 [逾六成市民反对选举设资格审查制度 港府却考虑扩至区议会选举](/articles/rfi/1032050.md)
-
-4-11 [路透社：阿里巴巴被罚后其他巨头胆战心惊等传票](/articles/rfi/1032051.md)
-
-4-11 [圣文森火山爆发 烟尘覆盖成灰白世界 – 法国国际广播电台 - RFI](/articles/rfi/1032052.md)
-
-4-11 [缅甸安全部队最近两天内打死80多名示威者 - 要闻分析](/articles/rfi/1032053.md)
 
