--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+4-15 [北京在港宣传“国安教育日”    文革气氛笼罩香港](/articles/rfa/1045857.md)
+
+4-15 [中国针对杜德访台释放军演消息 周边海域成美中角力舞台](/articles/rfa/1045858.md)
+
+4-15 [欧美砸重金打造半导体制造业 台湾谋求巩固并扩大优势](/articles/rfa/1045859.md)
+
 4-15 [蔡英文接见美国访问团 杜德：应老友拜登请托而来](/articles/rfa/1045860.md)
 
 4-15 [央媒发香港抗争“幕后金主”认罪视频    “金主” 李亨利同是薄熙来案证人](/articles/rfa/1045861.md)
@@ -594,10 +600,4 @@
 3-16 [异议人士申有连被拘十日   四川异议人士至今未放](/articles/rfa/1046155.md)
 
 3-16 [中国施压法国参议员取消访台 台外交部谴责横蛮无礼](/articles/rfa/1046156.md)
-
-3-16 [阿里巴巴被要求出售媒体资产    学者 : 中央要求媒体 “姓习”](/articles/rfa/1046157.md)
-
-3-16 [香港社运等纪录片入围奥斯卡  中宣部下令封杀并取消直播](/articles/rfa/1046158.md)
-
-3-16 [打中国疫苗可获签证便利  公平吗？](/articles/rfa/1046159.md)
 
