--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-15 [“气候外交”：习近平将出席中法德气候视频峰会](/articles/rfi/1031749.md)
+
 4-15 [美国务卿布林肯秘访阿富汗 讨论撤军 – 法国国际广播电台 - RFI](/articles/rfi/1031750.md)
 
 4-15 [零售和就业数据佳 美股开盘涨升 – 法国国际广播电台 - RFI](/articles/rfi/1031751.md)
@@ -598,6 +600,4 @@
 4-11 [维权人士郭宏伟狱中死亡 生前曾遭虐待](/articles/rfi/1032047.md)
 
 4-11 [新疆棉为例 港官指学校不宜播中国官方指为「失实」的报道](/articles/rfi/1032048.md)
-
-4-11 [新疆一煤矿透水 仍有21人受困](/articles/rfi/1032049.md)
 
