--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,7 +1,7 @@
 中国数字时代
 ------
 
-4-15 [【异闻观止】央视新闻｜吃着中国饭砸中国碗！起底“双面人”李亨利](/articles/cdt/383700.md)
+4-15 [央视新闻｜吃着中国饭砸中国碗！起底“双面人”李亨利](/articles/cdt/383700.md)
 
 4-15 [【立此存照】凯迪网编委会致网友的一封信：与“公知”势力划清界线](/articles/cdt/383705.md)
 
