--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-16 [渗透恐吓又一桩！加拿大关注中国人权组织成员遭死亡威胁](/articles/rfa/1045855.md)
+
 4-15 [进口芯片短缺涨价潮蔓延 中国部分企业停工](/articles/rfa/1045856.md)
 
 4-15 [北京在港宣传“国安教育日”    文革气氛笼罩香港](/articles/rfa/1045857.md)
@@ -598,6 +600,4 @@
 3-16 [台防长证实美准售台潜舰重要装备  学者：台湾安全符合美国利益](/articles/rfa/1046153.md)
 
 3-16 [受困抑郁症成把柄  许志永女友李翘楚被临沂检方批捕](/articles/rfa/1046154.md)
-
-3-16 [异议人士申有连被拘十日   四川异议人士至今未放](/articles/rfa/1046155.md)
 
