--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-16 [伊拉克军方：巴格达发生爆炸 至少一人死亡多人受伤](/articles/voa/1041477.md)
+
+4-16 [时事大家谈: 克里到访上海，气候合作能否重启美中关系？](/articles/voa/1041478.md)
+
 4-16 [澳总理批评威权统治 警告世界正面临“巨大两级分化”风险](/articles/voa/1041479.md)
 
 4-16 [美国驱逐10名俄罗斯驻美外交人员 并对俄实施多项严厉制裁](/articles/voa/1041480.md)
@@ -596,8 +600,4 @@
 4-3 [美中芯片战升级 专家：美国将继续领先](/articles/voa/1041775.md)
 
 4-3 [香港泛民建制政坛元老谈北京修改选制 建制内部竞争与国际关注](/articles/voa/1041776.md)
-
-4-3 [菅义伟访美推迟，美日预计会申明共同保卫尖阁诸岛之责任](/articles/voa/1041777.md)
-
-4-3 [哈萨克反中抗议此起彼伏 中国“一带一路”前途难料](/articles/voa/1041778.md)
 
