--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-16 [香港民运人士周永康回应中国央视：指控是虚构故事](/articles/rfa/1045853.md)
+
 4-16 [法国外长宣布参加“印太倡议”  与印、澳合作应对中国](/articles/rfa/1045854.md)
 
 4-16 [渗透恐吓又一桩！加拿大关注中国人权组织成员遭死亡威胁](/articles/rfa/1045855.md)
@@ -598,6 +600,4 @@
 3-17 [北京就人权制裁威胁欧盟  维族人在英遭受中国政府恐吓](/articles/rfa/1046151.md)
 
 3-17 [中国媒体爆来源不明胎盘制中药  台专家：已有植物荷尔蒙可取代](/articles/rfa/1046152.md)
-
-3-16 [台防长证实美准售台潜舰重要装备  学者：台湾安全符合美国利益](/articles/rfa/1046153.md)
 
