--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-16 [美促各国再捐二十亿助全球疫苗分配 中国疫苗外交恐受挫](/articles/rfa/1045851.md)
+
+4-16 [美呼吁加强美日韩三边联盟 日韩内部产生分歧](/articles/rfa/1045852.md)
+
 4-16 [香港民运人士周永康回应中国央视：指控是虚构故事](/articles/rfa/1045853.md)
 
 4-16 [法国外长宣布参加“印太倡议”  与印、澳合作应对中国](/articles/rfa/1045854.md)
@@ -596,8 +600,4 @@
 3-17 [沙尘暴让“北京变北宋”  环保高调治理成讽刺](/articles/rfa/1046149.md)
 
 3-17 [美日2+2会谈齐声谴责中国     加强美日同盟和关注台海稳定](/articles/rfa/1046150.md)
-
-3-17 [北京就人权制裁威胁欧盟  维族人在英遭受中国政府恐吓](/articles/rfa/1046151.md)
-
-3-17 [中国媒体爆来源不明胎盘制中药  台专家：已有植物荷尔蒙可取代](/articles/rfa/1046152.md)
 
