--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-16 [抗衡“一带一路”，美国不会走中国套路](/articles/voa/1041474.md)
+
+4-16 [罗马尼亚政府批准法案 实际将禁止中国和华为参与5G网络](/articles/voa/1041475.md)
+
+4-16 [香港民主派组织游行抗议全民国家安全教育日 忧大陆化教材洗脑](/articles/voa/1041476.md)
+
 4-16 [伊拉克军方：巴格达发生爆炸 至少一人死亡多人受伤](/articles/voa/1041477.md)
 
 4-16 [时事大家谈: 克里到访上海，气候合作能否重启美中关系？](/articles/voa/1041478.md)
@@ -594,10 +600,4 @@
 4-3 [美中“气候总管”迟迟不谈，两国究竟打算合作还是竞争？](/articles/voa/1041772.md)
 
 4-3 [美疾控中心：完成接种新冠疫苗者可在美国安全旅行](/articles/voa/1041773.md)
-
-4-3 [嫌疑人驾车撞击国会大厦外路障 警察一死一伤](/articles/voa/1041774.md)
-
-4-3 [美中芯片战升级 专家：美国将继续领先](/articles/voa/1041775.md)
-
-4-3 [香港泛民建制政坛元老谈北京修改选制 建制内部竞争与国际关注](/articles/voa/1041776.md)
 
