--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-16 [做朋友比爱人好 A-Rod与珍妮佛罗培兹正式宣布分手 – 法国国际广播电台 - RFI](/articles/rfi/1031726.md)
+
 4-16 [中共新版党史虚化文革超量篇幅颂习](/articles/rfi/1031727.md)
 
 4-16 [拜登宣布将从阿富汗撤军 美国各界反应强烈](/articles/rfi/1031728.md)
@@ -598,6 +600,4 @@
 4-12 [反政变示威及军政府镇压持续 博雷利撰文谈“缅甸的民主之战” - 要闻解说](/articles/rfi/1032024.md)
 
 4-11 [知名安全论坛拟授奖蔡英文被指遭特鲁多政府威胁](/articles/rfi/1032025.md)
-
-4-11 [澳洲多所大学聘请中国问题专家排查外国干预风险](/articles/rfi/1032026.md)
 
