--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-16 [美国会共和党人再推法案 拟禁止联邦政府设备使用TikTok](/articles/voa/1041464.md)
+
+4-16 [美海军最高将领：中俄在考验美国盟友的凝聚力](/articles/voa/1041465.md)
+
 4-16 [美国失业补助申请人数大幅下降](/articles/voa/1041466.md)
 
 4-16 [前副国安顾问博明：中国正在加强经济胁迫能力](/articles/voa/1041467.md)
@@ -596,8 +600,4 @@
 4-3 [新疆棉花遮蔽与凸显中国人权问题](/articles/voa/1041762.md)
 
 4-3 [中国对外国银行设限引发全球银行高管担忧](/articles/voa/1041763.md)
-
-4-3 [台湾称欧洲国家也在为其潜舰国造提供帮助](/articles/voa/1041764.md)
-
-4-3 [纽约警局：精神病是最近针对亚裔袭击案中的一个因素](/articles/voa/1041765.md)
 
