--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-16 [辉瑞执行长：一年内追加第3剂疫苗可能必要 – 法国国际广播电台 - RFI](/articles/rfi/1031724.md)
+
+4-16 [巴黎圣母院的建材揭示了其秘密](/articles/rfi/1031725.md)
+
 4-16 [做朋友比爱人好 A-Rod与珍妮佛罗培兹正式宣布分手 – 法国国际广播电台 - RFI](/articles/rfi/1031726.md)
 
 4-16 [中共新版党史虚化文革超量篇幅颂习](/articles/rfi/1031727.md)
@@ -596,8 +600,4 @@
 4-12 [确保「新」伊朗核协议护利益 以色列将与美国合作 – 法国国际广播电台 - RFI](/articles/rfi/1032022.md)
 
 4-12 [巴西恩坎塔多市造基督像 比里约雕像还高5公尺 – 法国国际广播电台 - RFI](/articles/rfi/1032023.md)
-
-4-12 [反政变示威及军政府镇压持续 博雷利撰文谈“缅甸的民主之战” - 要闻解说](/articles/rfi/1032024.md)
-
-4-11 [知名安全论坛拟授奖蔡英文被指遭特鲁多政府威胁](/articles/rfi/1032025.md)
 
