--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-16 [日本会对抗中国吗？菅义伟访美或将传递信号](/articles/nyt/1046956.md)
+
 4-16 [从香港、东非到加州：我家的全球疫苗接种故事](/articles/nyt/1046957.md)
 
 4-15 [我在阿富汗打过仗，我仍然不知道这是否值得](/articles/nyt/1046958.md)
@@ -598,6 +600,4 @@
 1-27 [简报：香港禁足令暴露社会鸿沟；MIT抗议华裔教授被捕](/articles/nyt/1047254.md)
 
 1-27 [拜登上台后，中美“媒体战”能否走出阴影？](/articles/nyt/1047255.md)
-
-1-26 [太空之争，下一场美中“大国竞赛”](/articles/nyt/1047256.md)
 
