--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,24 @@
 路透
 ------
 
+4-16 [阿里巴巴续推降平台门槛及成本措施 创造更开放及公平的平台环境](/articles/reuters/1039236.md)
+
+4-16 [即时观点：中国一季度GDP增速创纪录新高 PPI价格上涨对复苏制约须关注](/articles/reuters/1039237.md)
+
+4-16 [焦点：美债价格为何无视强劲数据急升 各方投资人亟寻解答](/articles/reuters/1039238.md)
+
+4-16 [中国统计局：全年CPI有望持于较温和区间 要加大对小微、服务业纾困力度](/articles/reuters/1039239.md)
+
+4-16 [全球股市处在纪录高位附近 中美数据支撑全球复苏希望](/articles/reuters/1039240.md)
+
+4-16 [日本央行总裁暗示有讨论货币政策在气候变化方面作用的空间](/articles/reuters/1039241.md)
+
+4-16 [综述：美国3月零售销售创10个月最大升幅 初请失业金人数降至逾一年最低](/articles/reuters/1039242.md)
+
+4-16 [戴琪呼吁采取大胆行动 将气候问题置于贸易政策的中心](/articles/reuters/1039243.md)
+
+4-16 [综述：欧元区增长预估大幅调降 疫苗接种缓慢是最大风险--路透调查](/articles/reuters/1039244.md)
+
 4-16 [日本疫情进入第四波 紧急举措实施地区料扩大至10个](/articles/reuters/1039245.md)
 
 4-16 [亚股几无变动等候中国数据 全球经济复苏希望支撑全球股市](/articles/reuters/1039246.md)
@@ -582,22 +600,4 @@
 4-9 [中海油称蓬莱平台井喷着火已被扑灭 未发生原油泄漏也未构成环境污染](/articles/reuters/1039534.md)
 
 4-9 [股市持坚于纪录高位附近 因美国通胀疑虑缓解提振美股](/articles/reuters/1039535.md)
-
-4-9 [中海油位于渤海湾油田着火失踪三人 引发对漏油和潜在索赔关注--花旗](/articles/reuters/1039536.md)
-
-4-9 [缅甸安全部队与反军政府示威者爆发血腥冲突 美国扩大制裁](/articles/reuters/1039537.md)
-
-4-9 [即时观点：中国3月CPI同比由负转正仍温和 PPI远超预期创逾两年半高位](/articles/reuters/1039538.md)
-
-4-9 [综述：美联储政策制定者警告称风险来自新增感染 而非暂时性价格上涨](/articles/reuters/1039539.md)
-
-4-9 [百度在美国赢得有关公司遵守中国互联网法规的诉讼](/articles/reuters/1039540.md)
-
-4-9 [美国对伊核协议谈判的预期轻描淡写 特使可能返国](/articles/reuters/1039541.md)
-
-4-9 [北美基金主导下3月全球黄金ETF再录净流出 中国逆势买进--世界黄金协会](/articles/reuters/1039542.md)
-
-4-9 [美国总统拜登出手打击涉枪暴力 宣布多项控枪措施](/articles/reuters/1039543.md)
-
-4-9 [美欧日等主要央行有望制定央行数字货币共同规则--日本央行官员](/articles/reuters/1039544.md)
 
