--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-16 [丹•斯诺：世界上的国家来了又走，而中国一直在](/articles/ft/1045747.md)
+
 4-16 [多国前领导人及诺奖得主致信拜登 促其暂时中止新冠疫苗专利](/articles/ft/1045748.md)
 
 4-16 [物理殿堂中的艺术实践](/articles/ft/1045749.md)
@@ -598,6 +600,4 @@
 2-18 [拜登与以色列总理内塔尼亚胡通电话](/articles/ft/1046045.md)
 
 2-18 [美国指控三名朝鲜程序员通过黑客行动窃取13亿美元](/articles/ft/1046046.md)
-
-2-18 [日本岛根县知事呼吁取消今年东京奥运会](/articles/ft/1046047.md)
 
