--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-16 [818流水集会案判刑日 何俊仁盼港人坚守信念](/articles/dw/1042954.md)
+
 4-16 [华为惨剧将重演？美鹰派吁限制出售芯片设计工具给中国](/articles/dw/1042955.md)
 
 4-16 [美日峰会聚焦中国  涉台联合声明引关注](/articles/dw/1042956.md)
@@ -598,6 +600,4 @@
 3-30 [「12港人案」律师再遭打压 称维权律师社群已「乾掉」](/articles/dw/1043252.md)
 
 3-30 [「长赐号」顺利脱困 苏伊士运河恢复通行](/articles/dw/1043253.md)
-
-3-30 [中国欢迎联合国访问新疆　真的吗？](/articles/dw/1043254.md)
 
