--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-16 [独立鱼电影 | 一夜之间，全体下架，这举报真恶心](/articles/cdt/383672.md)
+
 4-15 [央视新闻｜吃着中国饭砸中国碗！起底“双面人”李亨利](/articles/cdt/383700.md)
 
 4-15 [【立此存照】凯迪网编委会致网友的一封信：与“公知”势力划清界线](/articles/cdt/383705.md)
@@ -598,6 +600,4 @@
 3-7 [维舟 | 货拉拉的苦果](/articles/cdt/385253.md)
 
 3-7 [【404文库】张展的泪与血](/articles/cdt/385260.md)
-
-3-7 [尖椒部落 | 庆祝妇女节除了买买买，还可以是不买](/articles/cdt/385265.md)
 
