--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+4-16 [每周时事分析：福岛核废水，重点在实地调查和第三方监督机制](/articles/ft/1045745.md)
+
+4-16 [沙岭殡葬城与红磡殡仪馆：香港议员更应该关心哪一个？](/articles/ft/1045746.md)
+
 4-16 [丹•斯诺：世界上的国家来了又走，而中国一直在](/articles/ft/1045747.md)
 
 4-16 [多国前领导人及诺奖得主致信拜登 促其暂时中止新冠疫苗专利](/articles/ft/1045748.md)
@@ -596,8 +600,4 @@
 2-18 [向英国人讲好中国故事之前，先明白中英文化差异](/articles/ft/1046043.md)
 
 2-18 [印度女记者被免除诽谤罪 提振印度#MeToo运动](/articles/ft/1046044.md)
-
-2-18 [拜登与以色列总理内塔尼亚胡通电话](/articles/ft/1046045.md)
-
-2-18 [美国指控三名朝鲜程序员通过黑客行动窃取13亿美元](/articles/ft/1046046.md)
 
