--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 4-16 [独立鱼电影 | 一夜之间，全体下架，这举报真恶心](/articles/cdt/383672.md)
 
+4-16 [【立此存照】“知网？是个什么恨国公知网站吗？”](/articles/cdt/383673.md)
+
 4-15 [央视新闻｜吃着中国饭砸中国碗！起底“双面人”李亨利](/articles/cdt/383700.md)
 
 4-15 [【立此存照】凯迪网编委会致网友的一封信：与“公知”势力划清界线](/articles/cdt/383705.md)
@@ -598,6 +600,4 @@
 3-8 [【网络民议】  习近平：中国已经可以平视这个世界了；网友：难道以前是仇视？](/articles/cdt/385250.md)
 
 3-8 [澎湃新闻评论 |  赵婷的成功，宋丹丹不一定理解得了](/articles/cdt/385251.md)
-
-3-7 [维舟 | 货拉拉的苦果](/articles/cdt/385253.md)
 
