--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-16 [穿防暴警服的泰迪熊：香港加强宣传国家安全](/articles/nyt/1046952.md)
+
+4-16 [黎智英被判一年监禁，李柱铭获缓刑](/articles/nyt/1046953.md)
+
 4-16 [摩擦重重的中美能合作应对气候挑战吗？](/articles/nyt/1046954.md)
 
 4-16 [中国一季度GDP增18.3%，消费者仍捂紧钱包](/articles/nyt/1046955.md)
@@ -596,8 +600,4 @@
 1-27 [华裔企业家谢家华之死：争吵、紧锁的房门和神秘火灾](/articles/nyt/1047250.md)
 
 1-27 [拜登商务部长提名人：将积极打击中国贸易做法](/articles/nyt/1047251.md)
-
-1-27 [MIT华裔教授陈刚涉隐瞒与中国关系被捕，学界发声抗议](/articles/nyt/1047252.md)
-
-1-27 [被封锁的“棺材房”：禁足令暴露香港社会不平等](/articles/nyt/1047253.md)
 
