--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-16 [回声Huisheng | 一个女权主义者的自白：我无法再继续对这场网暴保持沉默](/articles/cdt/383666.md)
+
+4-16 [【立此存照】编辑的艺术](/articles/cdt/383668.md)
+
 4-16 [端传媒 | 空前挤压与畸形生长：中国女权的内忧外困（节选）](/articles/cdt/383671.md)
 
 4-16 [独立鱼电影 | 一夜之间，全体下架，这举报真恶心](/articles/cdt/383672.md)
@@ -596,8 +600,4 @@
 3-8 [【CDT周报】第七期：如果弱者不能免于恐惧，那全社会都要为此付出代价](/articles/cdt/385242.md)
 
 3-8 [BBC | 中国两会：美国谴责北京改变香港选举制度“攻击民主体制”](/articles/cdt/385245.md)
-
-3-8 [【网络民议】  习近平：中国已经可以平视这个世界了；网友：难道以前是仇视？](/articles/cdt/385250.md)
-
-3-8 [澎湃新闻评论 |  赵婷的成功，宋丹丹不一定理解得了](/articles/cdt/385251.md)
 
