--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-16 [香港法庭宣布对七名香港民主派领袖的判决](/articles/voa/1041462.md)
+
 4-16 [中国第一季度经济增速爆表背后的急剧减速](/articles/voa/1041463.md)
 
 4-16 [美国会共和党人再推法案 拟禁止联邦政府设备使用TikTok](/articles/voa/1041464.md)
@@ -598,6 +600,4 @@
 4-4 [美伊谈判前夕伊朗提条件：要求“一步到位”解除对伊朗所有制裁](/articles/voa/1041760.md)
 
 4-3 [台湾铁路事故肇事企业负责人被羁押后获准保释](/articles/voa/1041761.md)
-
-4-3 [新疆棉花遮蔽与凸显中国人权问题](/articles/voa/1041762.md)
 
