--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-16 [巴西前总统鲁拉贪渎罪获翻案  可能再度参选 – 法国国际广播电台 - RFI](/articles/rfi/1031704.md)
+
 4-16 [澳国防军总司令：台海发生战争将是灾难性的](/articles/rfi/1031705.md)
 
 4-16 [罗马尼亚政府批准法案 禁止中国和华为参与5G网络](/articles/rfi/1031706.md)
@@ -598,6 +600,4 @@
 4-12 [巴西疫情延烧 加护病房年轻患者人数多于长者 – 法国国际广播电台 - RFI](/articles/rfi/1032002.md)
 
 4-12 [菲立普亲王过世 查尔斯感谢各界关心 – 法国国际广播电台 - RFI](/articles/rfi/1032003.md)
-
-4-12 [伊朗原子能组织：核设施遭恐怖行动攻击 – 法国国际广播电台 - RFI](/articles/rfi/1032004.md)
 
