--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-16 [要钱还是要命？中国强推自产疫苗护照](/articles/voa/1041460.md)
+
+4-16 [台海成美日峰会敏感议题 日本夹缝中处境微妙](/articles/voa/1041461.md)
+
 4-16 [香港法庭宣布对七名香港民主派领袖的判决](/articles/voa/1041462.md)
 
 4-16 [中国第一季度经济增速爆表背后的急剧减速](/articles/voa/1041463.md)
@@ -596,8 +600,4 @@
 4-4 [时事大家谈：下个疫情可能已经开始了 我们准备好了吗？](/articles/voa/1041758.md)
 
 4-4 [北京中亚外交倾斜乌兹别克斯坦 当地对中国好感下降](/articles/voa/1041759.md)
-
-4-4 [美伊谈判前夕伊朗提条件：要求“一步到位”解除对伊朗所有制裁](/articles/voa/1041760.md)
-
-4-3 [台湾铁路事故肇事企业负责人被羁押后获准保释](/articles/voa/1041761.md)
 
