--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,22 @@
 法广
 ------
 
+4-16 [知名有罪：黎智英和李卓人再因游行被加判2个月 共囚14个月](/articles/rfi/1031690.md)
+
+4-16 [菅义伟访美展示同盟  在华日企将高度关注共同声明](/articles/rfi/1031691.md)
+
+4-16 [世卫：从COVID-19学到教训 应用来对抗超级细菌 – 法国国际广播电台 - RFI](/articles/rfi/1031692.md)
+
+4-16 [美日峰会就台湾达共识 或秘而不宣](/articles/rfi/1031693.md)
+
+4-16 [黎智英等九名著名民主派因游行被判监8至18个月 李柱铭等四人获缓刑仍考虑上诉](/articles/rfi/1031694.md)
+
+4-16 [【视频】对俄紧张 乌克兰总统抵访巴黎寻求法德切实支持](/articles/rfi/1031695.md)
+
+4-16 [美中贸易逆差再次扩大 - 法国报纸摘要](/articles/rfi/1031696.md)
+
+4-16 [蔡英文告诉美国愿共同阻止中国冒进及挑衅 - 台北一周](/articles/rfi/1031697.md)
+
 4-16 [巴基斯坦反法浪潮濒临失控 法国人和企业被建议撤离](/articles/rfi/1031698.md)
 
 4-16 [亚股随华尔街股市涨势走高 – 法国国际广播电台 - RFI](/articles/rfi/1031699.md)
@@ -584,20 +600,4 @@
 4-12 [受中国封杀 赵婷《浪迹天地》夺英国电影学院奖4大奖](/articles/rfi/1031988.md)
 
 4-12 [随亚股早盘走势 欧股开盘波动 – 法国国际广播电台 - RFI](/articles/rfi/1031989.md)
-
-4-12 [BNO申请签证可父母分步移英 更富弹性助港人撤离](/articles/rfi/1031990.md)
-
-4-12 [财报季前夕交投清淡  东京股市下跌 – 法国国际广播电台 - RFI](/articles/rfi/1031991.md)
-
-4-12 [委内瑞拉称美国制裁害买不到疫苗 将生产古巴货 – 法国国际广播电台 - RFI](/articles/rfi/1031992.md)
-
-4-12 [海地勒赎案猖獗 7神职人员被绑包括两人法籍 – 法国国际广播电台 - RFI](/articles/rfi/1031993.md)
-
-4-12 [看好美国经济复苏 联准会主席：处于转折点 – 法国国际广播电台 - RFI](/articles/rfi/1031994.md)
-
-4-12 [缅甸军事镇压 逾700平民死 – 法国国际广播电台 - RFI](/articles/rfi/1031995.md)
-
-4-12 [欧盟：中俄阻挠国际因应缅甸危机 – 法国国际广播电台 - RFI](/articles/rfi/1031996.md)
-
-4-12 [美联准会主席鲍尔：网路风险令人忧心 – 法国国际广播电台 - RFI](/articles/rfi/1031997.md)
 
