--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-16 [【404文库】百度知道｜不得发布“习近平是傻逼”一类的涉政内容](/articles/cdt/383663.md)
+
 4-16 [回声Huisheng | 一个女权主义者的自白：我无法再继续对这场网暴保持沉默](/articles/cdt/383666.md)
 
 4-16 [【立此存照】编辑的艺术：把7700万一抹，印象大不同](/articles/cdt/383668.md)
@@ -598,6 +600,4 @@
 3-8 [【图说天朝】搞三八节活动被喝茶 警察索要“波伏娃”微信](/articles/cdt/385237.md)
 
 3-8 [自由亚洲｜方斌在哪里？武汉公民记者方斌被捕超过一年](/articles/cdt/385239.md)
-
-3-8 [【CDT周报】第七期：如果弱者不能免于恐惧，那全社会都要为此付出代价](/articles/cdt/385242.md)
 
