--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-16 [芝加哥13岁拉丁裔少年被杀引愤怒](/articles/dw/1042942.md)
+
 4-16 [自由欧洲电台呼吁欧洲人权法院阻止俄官方对其处罚](/articles/dw/1042943.md)
 
 4-16 [反对排核废水入海 中方召见日本驻华大使](/articles/dw/1042944.md)
@@ -598,6 +600,4 @@
 3-30 [德语媒体：欧洲，准备好与中国角力了吗？](/articles/dw/1043240.md)
 
 3-30 [“长赐号”脱困了，谁来为损失买单？](/articles/dw/1043241.md)
-
-3-30 [新冠溯源诸多问题无解 多国呼吁加强防疫合作](/articles/dw/1043242.md)
 
