--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-16 [拜登即将会见日本首相 加强美日同盟以应对中国挑战](/articles/voa/1041458.md)
+
+4-16 [台湾去年对中国投资比重大幅减至33%](/articles/voa/1041459.md)
+
 4-16 [要钱还是要命？中国强推自产疫苗护照](/articles/voa/1041460.md)
 
 4-16 [台海成美日峰会敏感议题 日本夹缝中处境微妙](/articles/voa/1041461.md)
@@ -596,8 +600,4 @@
 4-4 [缅甸政府军向抗议人士开枪，打死5人](/articles/voa/1041756.md)
 
 4-4 [担忧国家安全 美国两党参议员要求美数字广告商提交外国客户名单](/articles/voa/1041757.md)
-
-4-4 [时事大家谈：下个疫情可能已经开始了 我们准备好了吗？](/articles/voa/1041758.md)
-
-4-4 [北京中亚外交倾斜乌兹别克斯坦 当地对中国好感下降](/articles/voa/1041759.md)
 
