--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-16 [辽宁号怎么了？盛传海上定点停留一天引发热议](/articles/rfa/1045841.md)
+
 4-16 [谏言中共改革被控“颠覆” 党校教师子肃出狱生计陷困境](/articles/rfa/1045842.md)
 
 4-16 [香港《苹果日报》遭全方位攻击    左报倡“依法取缔”](/articles/rfa/1045843.md)
@@ -598,6 +600,4 @@
 3-18 [解放军6年内攻台？台防长：随时防范、奉陪到底](/articles/rfa/1046139.md)
 
 3-17 [李明哲遭中国关押近四年 家属一年无法探视](/articles/rfa/1046140.md)
-
-3-17 [亚太首例 台湾、帕劳开启“旅游泡泡”](/articles/rfa/1046141.md)
 
