--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-17 [伊朗据称将浓缩铀丰度升至60% 伊核协议签约国表担忧](/articles/voa/1041455.md)
+
 4-16 [美国警方开枪事件接连发生 明、伊两州民众和平上街抗议](/articles/voa/1041456.md)
 
 4-16 [缅甸联邦议会代表委员会宣布成立民族团结政府 望恢复民主](/articles/voa/1041457.md)
@@ -598,6 +600,4 @@
 4-4 [缅甸局势火爆，北京想不趟浑水却左右为难](/articles/voa/1041753.md)
 
 4-4 [英国各地示威，抗议警察扩权法案](/articles/voa/1041754.md)
-
-4-4 [索马里首都发生自杀炸弹攻击，炸死10人](/articles/voa/1041755.md)
 
