--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-17 [美财政部发布汇率报告：台湾符合汇率操纵标准 中国列入观察名单](/articles/voa/1041454.md)
+
 4-17 [伊朗据称将浓缩铀丰度升至60% 伊核协议签约国表担忧](/articles/voa/1041455.md)
 
 4-16 [美国警方开枪事件接连发生 明、伊两州民众和平上街抗议](/articles/voa/1041456.md)
@@ -598,6 +600,4 @@
 4-4 [克里：美国“有希望”能与中国合作应对气候变化](/articles/voa/1041752.md)
 
 4-4 [缅甸局势火爆，北京想不趟浑水却左右为难](/articles/voa/1041753.md)
-
-4-4 [英国各地示威，抗议警察扩权法案](/articles/voa/1041754.md)
 
