--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-17 [非政府组织敦促美国奥委会采取行动 将北京冬奥会移到别国举办](/articles/voa/1041453.md)
+
 4-17 [美财政部发布汇率报告：台湾符合汇率操纵标准 中国列入观察名单](/articles/voa/1041454.md)
 
 4-17 [伊朗据称将浓缩铀丰度升至60% 伊核协议签约国表担忧](/articles/voa/1041455.md)
@@ -598,6 +600,4 @@
 4-4 [纽时：北京用大量船只收紧对南中国海控制](/articles/voa/1041751.md)
 
 4-4 [克里：美国“有希望”能与中国合作应对气候变化](/articles/voa/1041752.md)
-
-4-4 [缅甸局势火爆，北京想不趟浑水却左右为难](/articles/voa/1041753.md)
 
