--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-17 [一名吉他手成为冲击国会骚乱事件的首位认罪嫌疑人](/articles/voa/1041448.md)
+
 4-17 [9名香港民主派人士反送中8-18案被判监8至18月 李柱铭等4人缓刑](/articles/voa/1041449.md)
 
 4-17 [北京渗透西方校园，美中教育交流能否给美国带来任何益处？](/articles/voa/1041450.md)
@@ -598,6 +600,4 @@
 4-5 [美能源部长: 如果没有共和党人的支持，拜登将推进基础设施建设计划](/articles/voa/1041746.md)
 
 4-5 [约旦政局突变 前王储称被软禁](/articles/voa/1041747.md)
-
-4-5 [缅甸民众用彩蛋传递抗议信息 教宗方济各复活节致辞表达对缅甸年轻人支持](/articles/voa/1041748.md)
 
