--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-17 [美国代表团结束对台湾三天的访问](/articles/voa/1041447.md)
+
 4-17 [一名吉他手成为冲击国会骚乱事件的首位认罪嫌疑人](/articles/voa/1041448.md)
 
 4-17 [9名香港民主派人士反送中8-18案被判监8至18月 李柱铭等4人缓刑](/articles/voa/1041449.md)
@@ -598,6 +600,4 @@
 4-5 [拜登4月16日白宫会菅义伟，美欧俄中将重启伊朗核武谈判](/articles/voa/1041745.md)
 
 4-5 [美能源部长: 如果没有共和党人的支持，拜登将推进基础设施建设计划](/articles/voa/1041746.md)
-
-4-5 [约旦政局突变 前王储称被软禁](/articles/voa/1041747.md)
 
