--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-17 [李怀庆二审多处程序违法    耿和担心高智晟已被迫害致死](/articles/rfa/1045836.md)
+
 4-17 [拜登会见菅义伟   深入讨论中国议题](/articles/rfa/1045837.md)
 
 4-17 [专访立陶宛议员：被中共制裁表示我做对了](/articles/rfa/1045838.md)
@@ -598,6 +600,4 @@
 3-18 [抵制冬奥并非首选  有人提出其它选项](/articles/rfa/1046134.md)
 
 3-18 [Signal疑被墙  中国计划出新规筑更高的墙](/articles/rfa/1046135.md)
-
-3-18 [中国“五毛”网红酒后痛斥中共  背后原因涉及维权](/articles/rfa/1046136.md)
 
