--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-17 [港青逃亡美国三个月获得政庇 情不自禁为自由欢呼](/articles/voa/1041440.md)
+
 4-17 [《周周侃》疑陷文字狱 旅美时评人回中国失联](/articles/voa/1041441.md)
 
 4-17 [菅义伟：与拜登再次确认台海和平重要性](/articles/voa/1041442.md)
@@ -598,6 +600,4 @@
 4-5 [内外交困下 中国科技巨头转往新加坡扩展业务](/articles/voa/1041738.md)
 
 4-5 [不顾军警镇压 缅甸民众继续示威 推进“春季革命”](/articles/voa/1041739.md)
-
-4-5 [美高教费用难负荷 国际学生盼纾困金](/articles/voa/1041740.md)
 
