--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-17 [緬甸瀕臨內戰：日本在譴責聲下堤防中國插手支援？](/articles/dw/1042938.md)
+
 4-16 [BCI：因遭网络攻击撤下涉新疆声明](/articles/dw/1042939.md)
 
 4-16 [德语媒体：拜登努力打造“反北京朋友圈”](/articles/dw/1042940.md)
@@ -598,6 +600,4 @@
 3-31 [G7前夕暗批中国 英吁终止恶性贸易行为](/articles/dw/1043236.md)
 
 3-31 [布林肯誓言捍卫世界人权  自己和盟友都批](/articles/dw/1043237.md)
-
-3-31 [疫情起源报告受质疑 谭德塞罕见批评北京](/articles/dw/1043238.md)
 
