--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,11 +1,15 @@
 中国数字时代
 ------
 
+4-17 [回归常识｜真威武！超生罚款“虽久必究”](/articles/cdt/383626.md)
+
 4-17 [多数派 | 微博：崭新暴力形式的温床——你我都是案上鱼肉！](/articles/cdt/383629.md)
 
 4-17 [立场新闻 | 专访彭定康：忆身陷囹圄战友 读旧日记信香港重生](/articles/cdt/383630.md)
 
 4-17 [【立此存照】中国网 | 全国网警集体入驻抖音 警民互动进入短视频时代](/articles/cdt/383652.md)
+
+4-17 [【网络民议】BCI官网下架涉新疆棉声明 弄得“里外不是人”](/articles/cdt/383659.md)
 
 4-16 [【404文库】百度知道｜不得发布“习近平是傻逼”一类的涉政内容](/articles/cdt/383663.md)
 
@@ -596,8 +600,4 @@
 3-15 [【CDT推荐】本周推荐媒体](/articles/cdt/384972.md)
 
 3-15 [2047通讯社｜专访“Fuck学习强国”刷分工具作者唐文正（Xmader）](/articles/cdt/384982.md)
-
-3-15 [【立此存照】去年的“造谣诋毁”也跑不掉？潘石屹之子潘瑞疑遭上网追逃](/articles/cdt/384984.md)
-
-3-15 [【CDT周报】第八期：“爱国不是爱文化的历史的中国，而是爱中共领导下的中国”](/articles/cdt/384986.md)
 
