--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 4-17 [回归常识｜真威武！超生罚款“虽久必究”](/articles/cdt/383626.md)
 
+4-17 [【来龙去脉】香港“818集会案”宣判 9名民主派人士被判囚8至18个月](/articles/cdt/383628.md)
+
 4-17 [多数派 | 微博：崭新暴力形式的温床——你我都是案上鱼肉！](/articles/cdt/383629.md)
 
 4-17 [立场新闻 | 专访彭定康：忆身陷囹圄战友 读旧日记信香港重生](/articles/cdt/383630.md)
@@ -598,6 +600,4 @@
 3-15 [无逸说｜1991年山东冠县的“百日无孩运动”](/articles/cdt/384961.md)
 
 3-15 [【CDT推荐】本周推荐媒体](/articles/cdt/384972.md)
-
-3-15 [2047通讯社｜专访“Fuck学习强国”刷分工具作者唐文正（Xmader）](/articles/cdt/384982.md)
 
