--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+4-17 [Covid-19: 巴西卫生部请女性推迟怀孕](/articles/rfi/1031636.md)
+
+4-17 [缅甸军政府领导人将出席东协峰会　政变后首次出访 – 法国国际广播电台 - RFI](/articles/rfi/1031637.md)
+
+4-17 [被控取得敏感情资  乌克兰外交官在俄罗斯遭拘留 – 法国国际广播电台 - RFI](/articles/rfi/1031638.md)
+
+4-17 [俄罗斯反手驱逐10名美国外交官 禁多名高官入境](/articles/rfi/1031639.md)
+
 4-17 [解放报： 香港将黎智英的头颅奉献给北京 - 法国报纸摘要](/articles/rfi/1031640.md)
 
 4-17 [电子眼，高速路上的印钞机 - 微言微语](/articles/rfi/1031641.md)
@@ -592,12 +600,4 @@
 4-13 [白宫：美未涉入伊朗核设施爆炸事件](/articles/rfi/1031934.md)
 
 4-13 [美明尼苏达州20岁黑人男子被警察当街击毙](/articles/rfi/1031935.md)
-
-4-13 [中国专家称10亿人接种才能建立“免疫屏障”](/articles/rfi/1031936.md)
-
-4-13 [据称杀非裔女警误将手枪当电击枪 拜登吁勿暴动 – 法国国际广播电台 - RFI](/articles/rfi/1031937.md)
-
-4-13 [中国学生“集体砸手机”   要求大庭广众下用铁锤砸](/articles/rfi/1031938.md)
-
-4-13 [英国12日逐步解封](/articles/rfi/1031939.md)
 
