--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-17 [【立此存照】4起“危害国家安全典型案例”：河北在校大学生田创涉嫌煽动颠覆国家政权罪](/articles/cdt/383608.md)
+
 4-17 [【图说天朝】汕头大学的假期读书班书单](/articles/cdt/383618.md)
 
 4-17 [【网络民议】常玮平律师：从来也不想颠覆谁，我只是想做对的事，讲堂堂正正的道理](/articles/cdt/383619.md)
@@ -598,6 +600,4 @@
 3-16 [Lovetrumpshate｜难以置信的事实：绝大部分国人只有小学和初中学历](/articles/cdt/384939.md)
 
 3-16 [【旧闻重温】马云：北京雾霾特别高兴 特权阶层没特供空气了](/articles/cdt/384946.md)
-
-3-16 [自由亚洲 | 变态虐待 律师受威胁 恶俗维基案将强行结案](/articles/cdt/384947.md)
 
