--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-17 [大流疫让人类付出巨大代价：300万人死亡，1.4亿人感染](/articles/voa/1041436.md)
+
 4-17 [“战狼外交”欧洲点燃烽烟 分析：习近平政治的缩影](/articles/voa/1041437.md)
 
 4-17 [“中国办奥运是为政治，而非体育” 美议员呼吁抵制北京冬奥](/articles/voa/1041438.md)
@@ -598,6 +600,4 @@
 4-5 [中国新冠病毒疫情出现反复 当局大力推广国产疫苗接种](/articles/voa/1041734.md)
 
 4-5 [港府考虑限制“投白票” 全方位封杀表抗议民意？](/articles/voa/1041735.md)
-
-4-5 [中国兵器集团前董事长尹家绪被调查，军工央企三大员前赴后继](/articles/voa/1041736.md)
 
