--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-18 [捷克驱逐18名俄罗斯外交官](/articles/voa/1041430.md)
+
 4-18 [俄罗斯乌克兰相互驱逐外交官](/articles/voa/1041431.md)
 
 4-18 [伊朗核协议谈判维也纳恢复举行](/articles/voa/1041432.md)
@@ -598,6 +600,4 @@
 4-6 [德日将举行首次2+2对话，联手遏制中国](/articles/voa/1041728.md)
 
 4-6 [菲律宾总统府就中国船只入侵向北京发出严厉警告](/articles/voa/1041729.md)
-
-4-5 [何瑞恩: 阿拉斯加会谈没有改变美中两国“竞争性相互依存”的本质](/articles/voa/1041730.md)
 
