--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-18 [老朱煮酒 | 流水账4月12-13日](/articles/cdt/383566.md)
+
 4-18 [【404文库】学人Scholar | 温家宝深情撰文：我的母亲](/articles/cdt/383579.md)
 
 4-18 [【立此存照】怀疑弟弟打中国疫苗后死亡遭封禁；胡锡进泄露“特供疫苗”秘密？](/articles/cdt/383599.md)
@@ -598,6 +600,4 @@
 3-17 [【异闻观止】环球时报 | 俄虽夺我大片领土 中国舆论应多挺普京](/articles/cdt/384924.md)
 
 3-16 [【CDTV】肖美丽Herstory演讲：让我们成为变革中一次次小小的心跳](/articles/cdt/384929.md)
-
-3-16 [【图说天朝】“一切问题都是工作人员小王造成的”](/articles/cdt/384934.md)
 
