--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-18 [事实核查：俄罗斯卫星五号疫苗安全有效吗？](/articles/dw/1042916.md)
+
+4-18 [中美发表联合声明 携手应对气候危机](/articles/dw/1042917.md)
+
 4-18 [WWF：欧盟是全球破坏森林的第二大推手](/articles/dw/1042918.md)
 
 4-18 [欧盟划定30种关键原材料 拟管控供应链风险](/articles/dw/1042919.md)
@@ -596,8 +600,4 @@
 4-1 [法国再次将进入全国停摆状态](/articles/dw/1043214.md)
 
 4-1 [加州发生枪击案 四死一伤](/articles/dw/1043215.md)
-
-4-1 [李卓人：摆脱专制统治是港人共同目标](/articles/dw/1043216.md)
-
-4-1 [香港818案被告罪成 集会自由恐受影响](/articles/dw/1043217.md)
 
