--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,6 +9,8 @@
 
 4-18 [Matters | Uyghur Voices：我所推荐的三档维吾尔 Podcasts](/articles/cdt/383571.md)
 
+4-19 [【中国哭墙】有你不孤单（4月11-18日，2021年）](/articles/cdt/383573.md)
+
 4-18 [【404文库】学人Scholar | 温家宝深情撰文：我的母亲](/articles/cdt/383579.md)
 
 4-18 [【立此存照】怀疑弟弟打中国疫苗后死亡遭封禁；胡锡进泄露“特供疫苗”秘密？](/articles/cdt/383599.md)
@@ -598,6 +600,4 @@
 3-17 [八点健闻｜百余种中成药修改说明书，曾长期享有“不良反应一笔带过”的特权](/articles/cdt/384910.md)
 
 3-17 [勿以类拒｜大胃王吃播博主“泡泡龙”之死](/articles/cdt/384913.md)
-
-3-17 [德国之声 | 美媒：中国要求阿里巴巴出售旗下媒体业务](/articles/cdt/384918.md)
 
