--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-19 [俄反对派领袖纳瓦尔尼狱中健康恶化 反对派呼吁周三举行全国抗议](/articles/voa/1041422.md)
+
+4-19 [珍珠奶茶在美国面临“短供”](/articles/voa/1041423.md)
+
 4-19 [美韩据报在日本福岛排核废水计划上现分歧](/articles/voa/1041424.md)
 
 4-18 [欧盟外长周一讨论捷克指控俄罗斯特工卷入2014年弹药库爆炸事件](/articles/voa/1041425.md)
@@ -596,8 +600,4 @@
 4-6 [中共势力威胁台湾新闻自由，台湾政府开始反击](/articles/voa/1041720.md)
 
 4-6 [宫内调停后 约旦国王与前王储紧张关系据报有所缓解](/articles/voa/1041721.md)
-
-4-6 [专访美宗教自由委员会副主席伯金斯：无惧北京制裁，继续为中国人民发声](/articles/voa/1041722.md)
-
-4-6 [澳新任防长说要与美国、中国合作，确保地区和平](/articles/voa/1041723.md)
 
